1.13.2/_sources/development/changes/1.13.rst.txt
.. NOTE: we use cross-references to highlight new functions and classes.
   Please follow the examples below, so the changelog page will have a link to
   the function/class documentation.

.. NOTE: there are 3 separate sections for changes, based on type:
   - "Enhancements" for new features
   - "Bugs" for bug fixes
   - "API changes" for backward-incompatible changes

.. NOTE: You can use the :pr:`xx` and :issue:`xx` role to x-ref to a GitHub PR
   or issue from this project.

:hide-toc:

.. include:: ./authors.inc

.. _latest:

Version 1.13.2
==============

- Patch in the legacy viewer the trigger channel for BioSemi system (:pr:`537` by `Mathieu Scheltienne`_)

Version 1.13.1
==============

- Add locks around buffers to prevent race condition between the stream's acquisition and epoch's acquisition thread (:pr:`522` by `Mathieu Scheltienne`_)

Version 1.13.0
==============

- Increase minimum python version to ``3.11``, add tests on python ``3.14`` and build and test for free-threaded python ``3.14t`` (:pr:`512` by `Mathieu Scheltienne`_)
